# StellarRender

./: CMakeLists.txt  README.md  Setup.bat
code/headers/: StellarRender.h
code/src/: StellarRender.cpp
